# ddd-forum-api.rs

./: .env  .env.example  Cargo.toml  README.md  bacon.toml  build.rs  docker-compose.yaml  railway.toml
migrations/: 001__create_users_table.sql  002__create_members_table.sql  003__create_posts_table.sql  004__create_comments_table.sql  005__create_votes_table.sql  006__seed_data.sql  007__add_timestamps.sql  008__remove_data_created_from_posts.sql  009_set_created_at_and_updated_at_to_not_null.sql
migrations/2024-10-14-185528_users/: up.sql
migrations/2024-10-16-190723_members/: down.sql  up.sql
migrations/2024-10-16-190746_posts/: down.sql  up.sql
migrations/2024-10-16-190806_comments/: down.sql  up.sql
migrations/2024-10-16-190820_votes/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/modules/: mod.rs
src/modules/common/: mod.rs
src/modules/common/infrastructure/api/: routes.rs
src/modules/common/use_cases/health/: controller.rs  model.rs  view.rs
src/modules/posts/: errors.rs  mod.rs
src/modules/posts/domain/: comment.rs  member_posted_by.rs  post.rs  vote.rs
src/modules/posts/infrastructure/api/: routes.rs
src/modules/posts/repositories/: post_repository.rs
src/modules/posts/repositories/implementations/: postgres_post_repository.rs
src/modules/posts/use_cases/list_posts/: controller.rs  model.rs  view.rs
src/modules/users/: errors.rs  mod.rs  repository.rs
src/modules/users/domain/: member.rs  user.rs  user_entity.rs
src/modules/users/repositories/: user_repository.rs
src/shared/: mod.rs
src/shared/common/: errors.rs
src/shared/infrastructure/: mod.rs
src/shared/infrastructure/api/: init.rs
src/shared/infrastructure/database/: connection.rs  errors.rs  init.rs  repository.rs
src/shared/infrastructure/utils/: api_response.rs  response.rs
src/shared/utils/conversion/: struct_to_hashmap.rs  value_to_hashmap.rs
src/shared/utils/validation/: is_empty_value.rs
tests/: curl.sh  users.rs
(+13 files in other folders)
