[package]
name = "ddd_forum_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
ulid = "1.1.3"
http = "1.1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
async-trait = "0.1.81"
dotenv = "0.15.0"
thiserror = "1.0.63"
once_cell = "1.19.0"
anyhow = "1.0.86"
reqwest = { version = "0.11", features = ["json"] }
fake = "2.9.2"
