[package]
name = "ddd-forum_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tower-http = { version = "0.6.1", features = ["cors", "trace", "tracing"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
http = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
